<resources>
    <string name="app_name">本地账本</string>
    <string name="total_amount">总计: %s 元</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="amount">金额:</string>
    <string name="category">分类:</string>
    <string name="remark">备注:</string>
    <string name="add_record">添加记账</string>
    <string name="save">保存</string>
    <string name="date">日期:</string>
    <string name="select_category">选择分类</string>
    <string name="account_type">账户类型：</string>
    <string name="error_amount">金额输入错误</string>
    <string name="in_out_report">收支报表</string>
    <string name="borrow_manage">借贷管理</string>
    <string name="add_borrow">添加借贷</string>
    <string name="category_manage">分类管理</string>
    <string name="record_list">记账明细</string>
    <string name="account_manage">账户管理</string>
    <string name="report">统计报表</string>
</resources>